--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <link rel="stylesheet" href="style.css"></link>
         <title>Binary Tree Visualization</title>
+        
+        <style> header {
+            background-color: #D4E2D4;
+        }
+          </style>
     </head>
     <body>
         <header>
@@ -13,6 +18,7 @@
             <div id="options">
                 <button onclick="treeAndArray()">Binary Tree Visualization</button>
                 <button onclick="heapify()">Max-Heap Visualization</button>
+                <button onclick="minHeapify()">Min-Heap Visualization</button>
                 <button onclick="createBinarySearchTree()">Binary Search Tree Visualization</button>
             </div>
         </header>
