--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </header>
         <div id="blurb">
-            <div id="visual-title"></div>
+            <div id="visual-title">Welcome to TreeVisio! Explore and visualize binary trees with ease!</div>
             <div id="instructions"></div>
         </div>
         <div id="binary-tree"></div>
